fix dark mode background issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,7 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground: white;
-    --ground: black;
+    --background: black;
   }
 }
 
